removendo bug do navbar

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
         </button>
     </div>
 
-
     <!--HOME-->
     <section id="home" class="card home-container">
       <div class="apresentacao-home">
@@ -86,29 +85,29 @@
 
           <!--REDES SOCIAIS-->
           <nav class="redes-sociais">
-              <ul>
-                  <li>
-                      <a href="">
-                        <p>Linkedin</p>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="">
-                        <p>github</p>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="">
-                        <p>whatsaoo</p>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="">
-                        <p>telegram</p>
-                      </a>
-                  </li>
-              </ul>
-          </nav>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/jonatas-elieser-moreira-948632270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                        <i class="fab fa-linkedin rede-s-item" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/jonatasemoreira" target="_blank">
+                        <i class="fab fa-github rede-s-item" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/5518998045921" target="_blank">
+                        <i class="fab fa-whatsapp rede-s-item" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.mediafire.com/file/d9yhfs7baubtu81/Jonatas_Elieser_Moreira.pdf/file" target="_blank">
+                        <h1 class="curriculo-icon">CV</h1>
+                    </a>
+                </li>
+            </ul>
+        </nav>
       </div>
       <div class="foto-home">
           <img src="assets/img/author.jpg" alt="author">
