correção do icons e fotos

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </nav>
       </div>
       <div class="foto-home">
-          <img src="assets/img/author.jpg" alt="author">
+          <img src="assets/img/logo.png" alt="author">
           <p>Nascido no interior de São Paulo, mas ainda sim, sangue de Mineiro. Amo viajar, ler, e estudar é tudo que eu gosto de fazer como robbie.</p>
           <p>Com mais de <strong>3 anos de experiência</strong> como desenvolvedor front end, também possuo conhecimento no back end, com criação de <strong>API Rest</strong>, banco de dados relacional e não relacional, utilizando nosso querido <strong>Laravel.php</strong>.</p>
       </div>
@@ -120,7 +120,7 @@
  <section id="about" class="about-container card">
   <div class="about-content">
       <h2>Sobre Mim</h2>
-       <p>Hoje, estou cursando engenharia da computação na universidade do Estado de São Paulo, Univesp, tenho 3 anos e meio como desenvolvedor front end, feliz por ter contruibuido para varios projetos incríveis e por ainda estar ajudando, mesmo que aos poucos, realizar sonhos.</p>
+       <p>Hoje, estou cursando engenharia da computação na universidade do Estado de São Paulo, Univesp. Estou feliz por ter contruibuido para varios projetos incríveis e por ainda estar ajudando a realizar sonhos.</p>
        <p>Além da paixão por técnologia, compartilho sentimento com a natureza e agricultura. <br>Formado em técnico agrícola no ano de 2018, no colégio agrícola de Adamantina - SP (Centro Paula Souza).</p>
   </div>
   <div class="about-content">
